# LabelReliability_and_PathologyDetection_in_ChestXrays

./: .gitignore  Backbone.drawio  Invalid_images.csv  MT_architectures.drawio  README.md  job.148386.out  job.148389.out  pyproject.toml  requirements.txt
Annotation/: Annotations_a1.xlsx  Extract_images_for_annotation.ipynb
Jobs/: MT_model2.json  MT_save_models.csv  PD_all_masks_pred.job  mask_augmentations.job  preprocess.job  save_masks.job  test_tensorflow.job  train_mt.job  train_pd_detection.job
Models/: PD_model1.json  PD_model2.json  PD_model3.json
Predictions/: MT_preds_PD.csv  PD_preds.csv  PD_preds_bbox_both_mask_inside.csv  PD_preds_bbox_both_mask_outside.csv  PD_preds_bbox_mask_inside.csv  PD_preds_bbox_mask_outside.csv  PD_preds_dilated_mask_1_inside.csv  PD_preds_dilated_mask_1_outside.csv  PD_preds_dilated_mask_2_inside.csv  PD_preds_dilated_mask_2_outside.csv  PD_preds_dilated_mask_3_inside.csv  PD_preds_dilated_mask_3_outside.csv  PD_preds_dilated_mask_4_inside.csv  PD_preds_dilated_mask_4_outside.csv  PD_preds_original_mask_outside.csv
Preprocessing/: Create_datasplits.ipynb  Preprocessing_dataframe.ipynb  Preprocessing_images.py  check_path.ipynb
Results/: MT_results.ipynb  PD_results.ipynb
Segmentation_preprocessing/: Save_mask.py  Segmentation_mask.ipynb  Segmentation_mask.py  Segmentation_mask_.ipynb  Segmentation_preprocessing.ipynb  Unet_save_model.py
Task-MultiTask/: MT_get_preds_PD.py  MT_save_models.py  MT_save_models_bbox_aug.py
Task-Pathology_detection/: PD_SEG_get_preds_all_masks.py  PD_get_preds.py  PD_get_preds_all_masks.py  (+1 more)
(+258 files in other folders)
