[tool.poetry]
name = "labelreliability-and-pathologydetection-in-chestxrays"
version = "0.1.0"
description = "Exploring multi-task learning for pathology detection"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.4"
keras="2.7.0"
Keras-Applications="1.0.8"
Keras-Preprocessing="1.1.2"
matplotlib="3.5.2"
numpy="1.21.6"
pandas="1.3.5"
scikit-learn="1.0.2"
scipy="1.7.3"
seaborn="0.9.0"
sklearn="0.0"
tensorflow="2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
